corrected more things

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -340,7 +340,7 @@ An additional difference between the models and simulations is that in the model
 \begin{subfigure}{0.45\textwidth}
   \includegraphics[width=\textwidth]{images/mcmc_euclid.pdf}
 \end{subfigure}
-\caption{Recovered cosmological parameters for a variable-depth (Observed) and uniform-depth (Reference) KiDS-$450$-like (left) and KiDS-$15\,000$-like survey (right). The KiDS-$450$-like figure was computed using the covariance matrix of H18. For the KiDS-$15\,000$-like survey, we divided the one of H18 by 30. This approximately accounts for the increased survey area of next-generation experiments, but does not factor in the increased number density and better shape measurements. Therefore, this figure constitutes a conservative estimate of this effect for Euclid and LSST. Both figures were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
+\caption{Recovered cosmological parameters for a variable-depth (Observed) and uniform-depth (Reference) KiDS-$450$-like (left) and KiDS-$15\,000$-like survey (right). The KiDS-$450$-like figure was computed using the covariance matrix of H18. For the KiDS-$15\,000$-like survey, we divided the one of H18 by 30. This approximately accounts for the increased survey area of next-generation experiments, but does not factor in the increased number density and better shape measurements. Therefore, this figure constitutes a conservative estimate for the effect of variable depth for Euclid and LSST. Both figures were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
 \label{fig:mcmc_results}
 \end{figure*} 
 
