corrected more things

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -348,8 +348,8 @@ An additional difference between the models and simulations is that in the model
 
 As the next step we want to assess how the observational depth variations propagate to cosmological parameters inferred from $\xi_\pm^{ij,\rm{obs}}$ compared to $\xi_\pm^{ij}$. For this test we choose a fiducial cosmology, $\b \Phi$, and determine the relative change in $\Omega_{\rm m}$ and $\sigma_8$ compared to a reference setup with uniform depth. All other cosmological parameters are kept fixed. First, we compute the reference correlation functions, $\xi_\pm^{ij}(\theta,\b\Phi)$, for each pair of redshift bins $i,j$ using \textsc{Nicaea} as described in Sec.~\ref{sec:xipm_semianalytic}. Then we derive the observed correlation functions, $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$, from Eq.~(\ref{eq:correctionfunction2}). Using the Markov-Chain Monte Carlo sampler \textsc{emcee}, we sample correlation functions $\xi_\pm^{ij}(\theta,\b\Phi')$ for different cosmologies $\b\Phi'$ and find the likelihood distribution, given the data vector $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ and the covariance-matrix computed in H18. This yields an estimate of the shift in $\Omega_{\rm m}$ and $\sigma_8$ introduced by varying depth.
 
-As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties for a KiDS-$450$-like survey. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30 to model a KiDS-$15\,000$-like survey, which approximately accounts for the increased survey area of LSST and Euclid with respect to KiDS-450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. As our modified covariance-matrix does not account for the factor of $\sim 4$ expected increase in galaxy number density for LSST and Euclid , we note that this likely to be a lower estimate for the significance of the effect.
- We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
+As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties for a KiDS-$450$-like survey. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30 to model a KiDS-$15\,000$-like survey, which approximately accounts for the increased survey area of LSST and Euclid with respect to KiDS-450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. As our modified covariance-matrix does not account for the factor of $\sim \! 4$ expected increase in galaxy number density for LSST and Euclid, we note that this likely to be a lower estimate for the significance of the effect.
+ Even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
 
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}. For various combinations of $\Omega_{\rm{m}}$ and $\sigma_8$ within the $95\%$ confidence limit of KV450, we report a variation in $\xi_\pm/\xi_\pm^{\rm{obs}}$ of a few percentage points on small scales.
