--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -406,6 +406,8 @@ CH acknowledges support from the Max Planck Society and the Alexander von Humbol
 \\
 KK acknowledges support by the Alexander von Humboldt Foundation.
 \\
+TT acknowledges funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sk{l}odowska-Curie grant agreement No 797794.
+\\
 Some of the results in this paper have been derived using the HEALPix \citep{2005ApJ...622..759G} package.
 \\
 This research has made use of NASA's Astrophysics Data System and adstex (\url{https://github.com/yymao/adstex}).
