--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -471,6 +471,8 @@ P^{\text{obs}}(\b \ell) = & P(\b \ell)+\int \frac{\text{d}^2\b \ell'}{(2\pi)^2} 
  = & P(\b \ell) + \la w^2\ra \int\frac{\text{d}^2\b k}{(2\pi)^2}\,\widehat{\Xi}(\b \ell-\b k)P(\b k)\, ,
 \end{align}
 which is a convolution of the power spectrum and the 2-dimensional sinc function \eqref{eq:sinc}.
+
+Note that due to the statistical inhomogeneity of the field, many usually adapted conventions fail. In particular, the Fourier transform of the observed power spectrum yields $\langle \gamma(\b 0)\gamma^*(\b\theta)\rangle$, but not the shear correlation function.
 \label{sec:calc of PS}
 
 \subsection{The function $E(\theta)$}
