added new explanation for discrepancy

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -26,6 +26,7 @@
 
 \usepackage{bm}
 \usepackage{verbatim}
+\usepackage{xcolor}
 %
 \usepackage{graphicx}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -324,15 +325,17 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
   \centering
   \includegraphics[width=0.9\linewidth]{images/xis_all1.pdf}
-  \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$. Note that the seemingly better agreement between the mocks and the analytic method is purely coincidental.}
+  \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$. Note that the seemingly better agreement between the mocks and the analytic method is purely coincidental; as the mocks only take galaxies with $z<2$ into account, they slightly underestimate the effect.}
   \label{fig:all_xis}
   \end{figure*}
 We observe that for high-redshift bins, all methods yield consistent results. For low-redshift bins, there are discrepancies between the different models. However, the average-redshift weighted analytic model is only valid for high redshifts, whereas the auto-correlation $\xi_+$ weighted model is entirely dependent on the choice of $\theta_{\rm{ref}}$. For $\theta_{\rm{ref}}=11'$, as chosen here, both analytic models agree very well for all redshift bins. For $\theta_{\rm{ref}}=0.\!'5$ (not shown), the auto-correlation weighted method agrees with the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}, the analytic method is not able to trace this change for any choice of $\theta_{\rm{ref}}$. Furthermore we note that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
 
 The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. %Furthermore, we notice some strong features in the simulations at lower values of $\theta$, which arise due to the resolution limit of the simulations.  %As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. 
-In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings. Note that the seemingly better agreement between mocks and the analytic method is purely coincidental.
+%In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings. Note that the seemingly better agreement between mocks and the analytic method is purely coincidental.
 
 An additional difference between the models and simulations is that in the models we neglect boundary effects and the sample-variance of the depth-distribution between pointings, whereas the simulations were performed with the KiDS-1000 footprint. In App.~\ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model we can estimate the impact of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a square footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
+
+\textcolor{blue}{In general, the semi-analytic model predicts a stronger effect than the mocks. This is due to the fact that the mocks are subject to a redshift-cutoff at $z=2$, meaning that they do not take the high-redshift tail of galaxies into account. When the same cutoff is applied to the models, the agreement on sub-pointing scales is striking (compare Fig.~\ref{fig:redshift_cutoff} in the Appendix).}
 
 \begin{figure*}
 \begin{subfigure}{0.45\textwidth}
@@ -680,6 +683,12 @@ quantile & $r$-band depth \\
 \hline
 \end{tabular}
 \end{table}
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.9\linewidth]{images/xis_all_cutoff.pdf}
+\caption{The same Figure as Fig.~\ref{fig:all_xis}, but in this case the redshift distributions $p_n^i(z)$ were set equal to zero for $z>2$ in the models to mimick the redshift-cutoff in the mocks.}
+\label{fig:redshift_cutoff}
+\end{figure}
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.9\linewidth]{images/compare_cosmos.pdf}
