--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -686,7 +686,7 @@ quantile & $r$-band depth \\
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.9\linewidth]{images/xis_all_cutoff.pdf}
-\caption{The same Figure as Fig.~\ref{fig:all_xis}, but in this case the redshift distributions $p_n^i(z)$ were set equal to zero for $z>2$ in the models to mimick the redshift-cutoff in the mocks.}
+\caption{The same Figure as Fig.~\ref{fig:all_xis}, but in this case the redshift distributions $p_n^i(z)$ were set equal to zero for $z>2$ in the models to mimick the redshift-cutoff in the mocks. Any residual differences are explained by the sub-pointing depth variations that are accounted for in the mocks, but not in the models. These variations slightly reduce the effect of varying depth.}
 \label{fig:redshift_cutoff}
 \end{figure}
 \begin{figure}[h]
