added marika's paper

--- a/cite.bib
+++ b/cite.bib
@@ -650,11 +650,23 @@ elt}, B.~D. and {Hansen}, F.~K. and {Reinecke}, M. and {Bartelmann}, M.},
 }
 
 @article{asgari/etal:2019,
- author = {{Asgari} and {Tr{\"o}ster} and {Heymans} and
-{Hildebrandt} and {van den Busch} and {Wright} and {Choi} and {Erben} and {Joachimi} and
-{Joudaki} and {Kannawadi} and {Kuijken} and {Lin} and {Schneider} and
-{Zuntz}},
- journal = {A\&A submitted},
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191005336A},
+ archiveprefix = {arXiv},
+ author = {{Asgari}, Marika and {Tr{\"o}ster}, Tilman and {Heymans}, Catherine and
+{Hildebrandt}, Hendrik and {den van Busch}, Jan Luca and
+{Wright}, Angus H. and {Choi}, Ami and {Erben}, Thomas and
+{Joachimi}, Benjamin and {Joudaki}, Shahab and {Kannawadi}, Arun and
+{Kuijken}, Konrad and {Lin}, Chieh-An and {Schneider}, Peter and
+{Zuntz}, Joe},
+ eid = {arXiv:1910.05336},
+ eprint = {1910.05336},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Oct},
+ pages = {arXiv:1910.05336},
+ primaryclass = {astro-ph.CO},
+ title = {{KiDS+VIKING-450 and DES-Y1 combined: Mitigating baryon feedback uncertainty with COSEBIs}},
  year = {2019}
 }
 
