added peter's suggestions

--- a/cite.bib
+++ b/cite.bib
@@ -854,17 +854,21 @@ elt}, B.~D. and {Hansen}, F.~K. and {Reinecke}, M. and {Bartelmann}, M.},
  year = {2018}
 }
 
-@misc{Xavier:2016,
+@article{Xavier:2016,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2016ascl.soft06015X},
- archiveprefix = {ascl},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.459.3693X},
+ archiveprefix = {arXiv},
  author = {{Xavier}, Henrique S. and {Abdalla}, Filipe B. and {Joachimi}, Benjamin},
- eid = {ascl:1606.015},
- eprint = {1606.015},
- keywords = {Software},
- month = {Jun},
- pages = {ascl:1606.015},
- title = {{FLASK: Full-sky Lognormal Astro-fields Simulation Kit}},
+ doi = {10.1093/mnras/stw874},
+ eprint = {1602.08503},
+ journal = {\mnras},
+ keywords = {gravitational lensing: weak, methods: statistical, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Jul},
+ number = {4},
+ pages = {3693-3710},
+ primaryclass = {astro-ph.CO},
+ title = {{Improving lognormal models for cosmological fields}},
+ volume = {459},
  year = {2016}
 }
 
