added peter's suggestions

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -473,7 +473,7 @@ P^{\text{obs}}(\b \ell) = & P(\b \ell)+\int \frac{\text{d}^2\b \ell'}{(2\pi)^2} 
 \end{align}
 which is a convolution of the power spectrum and the 2-dimensional sinc function \eqref{eq:sinc}.
 
-Note that due to the statistical inhomogeneity of the field, many usually adapted conventions fail. In particular, the Fourier transform of the observed power spectrum yields $\langle \gamma(\b 0)\gamma^*(\b\theta)\rangle$, but not the shear correlation function.
+Note that due to the statistical inhomogeneity of the field, many usually adapted conventions fail. In particular, $\langle \gamma(\theta)\gamma^*(\theta')\rangle$ does not only depend on the separation vector $\theta'-\theta$, but also on the position $\theta$. For example, the Fourier transform of the observed power spectrum yields $\langle \gamma(\b 0)\gamma^*(\b\theta)\rangle$, but not the shear correlation function.
 \label{sec:calc of PS}
 
 \subsection{The function $E(\theta)$}
